Windows is not case sensitive, so LMDB/Lmdb class name confusion